<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ej.mycalc.MainActivity">

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="137dp"
        android:text="@string/buttonOne"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="60dp"
        android:minWidth="80dp"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonTwo"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.295"
        android:minWidth="80dp"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonThree"
        tools:layout_editor_absoluteX="220dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.295"
        android:minWidth="80dp"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonFour"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="60dp"
        app:layout_constraintVertical_bias="0.399"
        android:minWidth="80dp"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonFive"
        tools:layout_editor_absoluteY="185dp"
        tools:layout_editor_absoluteX="140dp"
        android:minWidth="80dp"/>

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonSix"
        tools:layout_editor_absoluteY="185dp"
        tools:layout_editor_absoluteX="220dp"
        android:minWidth="80dp"/>

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonSeven"
        tools:layout_editor_absoluteX="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:minWidth="80dp"
        app:layout_constraintVertical_bias="0.498" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonEight"
        tools:layout_editor_absoluteX="140dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:minWidth="80dp"
        app:layout_constraintVertical_bias="0.498" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonNine"
        tools:layout_editor_absoluteX="222dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:minWidth="80dp"
        app:layout_constraintVertical_bias="0.498" />

    <Button
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonTen"
        tools:layout_editor_absoluteY="279dp"
        tools:layout_editor_absoluteX="60dp"
        android:minWidth="80dp"/>

    <Button
        android:id="@+id/buttonA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonAddition"
        tools:layout_editor_absoluteY="344dp"
        tools:layout_editor_absoluteX="60dp"
        android:minWidth="60dp"/>

    <Button
        android:id="@+id/buttonS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonSubtraction"
        tools:layout_editor_absoluteX="120dp"
        android:minWidth="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="119dp" />

    <Button
        android:id="@+id/buttonM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonMultiplication"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="119dp"
        android:minWidth="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.555" />

    <Button
        android:id="@+id/buttonD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonDivision"
        tools:layout_editor_absoluteX="240dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="119dp"
        android:minWidth="60dp"/>

    <Button
        android:id="@+id/buttonEq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonEqual"
        tools:layout_editor_absoluteX="222dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="184dp"
        android:minWidth="80dp"/>

    <Button
        android:id="@+id/buttonC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonClear"
        tools:layout_editor_absoluteX="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="184dp"
        android:minWidth="80dp"/>

    <EditText
        android:id="@+id/editText"
        android:layout_width="251dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="number"
        tools:layout_editor_absoluteX="60dp"
        tools:layout_editor_absoluteY="70dp" />

</android.support.constraint.ConstraintLayout>
